--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A (very) simple task list built in React",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack -d --watch",
+    "build": "webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +20,14 @@
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/jjmax75/react-task-list/issues"
+  },
+  "dependencies": {
+    "webpack": "~1.12.12",
+    "babel-core": "~6.4.5",
+    "babel-loader": "~6.2.1",
+    "babel-preset-react": "~6.3.13",
+    "babel-preset-es2015": "~6.3.13",
+    "react-dom": "~0.14.7",
+    "react": "~0.14.7"
   }
 }
